--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>customer-service-desk</title>
   <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.9/dist/css/bootstrap-select.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="./index.css" rel="stylesheet">
   <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
   <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.9/dist/js/bootstrap-select.min.js"></script>
@@ -15,7 +16,7 @@
 <body>
 <div class='service-desk-wrapper'>
   <div class="service-desk-header">
-    <select class="selectpicker" multiple>
+    <select class="selectpicker" multiple title='请选择客服'>
       <option>Mustard</option>
       <option>Ketchup</option>
       <option>Relish</option>
@@ -23,8 +24,8 @@
     <select class="select-month">
       <option value=''>请选择月份</option>
     </select>
-    <button type="button" class="btn btn-primary btn-sm">🔍搜索</button>
-    <button type="button" class="btn btn-warning btn-sm">重置</button>
+    <button type="button" class="btn btn-warning btn-sm btn-reset">重置</button>
+    <button type="button" class="btn btn-primary btn-sm btn-search">搜索</button>
   </div>
   <div class="service-desk-table">
     <table class="table table-bordered">
